--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -64,7 +64,7 @@
 .ion-android-cancel:before,
 .ion-android-car:before,
 .ion-android-cart:before,
-.ion-android-chat:before,
+.ion-android-house:before,
 .ion-android-checkbox:before,
 .ion-android-checkbox-blank:before,
 .ion-android-checkbox-outline:before,
@@ -209,12 +209,12 @@
 .ion-camera:before,
 .ion-card:before,
 .ion-cash:before,
-.ion-chatbox:before,
-.ion-chatbox-working:before,
-.ion-chatboxes:before,
-.ion-chatbubble:before,
-.ion-chatbubble-working:before,
-.ion-chatbubbles:before,
+.ion-housebox:before,
+.ion-housebox-working:before,
+.ion-houseboxes:before,
+.ion-housebubble:before,
+.ion-housebubble-working:before,
+.ion-housebubbles:before,
 .ion-checkmark:before,
 .ion-checkmark-circled:before,
 .ion-checkmark-round:before,
@@ -336,10 +336,10 @@
 .ion-ios-camera-outline:before,
 .ion-ios-cart:before,
 .ion-ios-cart-outline:before,
-.ion-ios-chatboxes:before,
-.ion-ios-chatboxes-outline:before,
-.ion-ios-chatbubble:before,
-.ion-ios-chatbubble-outline:before,
+.ion-ios-houseboxes:before,
+.ion-ios-houseboxes-outline:before,
+.ion-ios-housebubble:before,
+.ion-ios-housebubble-outline:before,
 .ion-ios-checkmark:before,
 .ion-ios-checkmark-empty:before,
 .ion-ios-checkmark-outline:before,
@@ -702,8 +702,8 @@
 .ion-social-sass:before,
 .ion-social-skype:before,
 .ion-social-skype-outline:before,
-.ion-social-snapchat:before,
-.ion-social-snapchat-outline:before,
+.ion-social-snaphouse:before,
+.ion-social-snaphouse-outline:before,
 .ion-social-tumblr:before,
 .ion-social-tumblr-outline:before,
 .ion-social-tux:before,
@@ -875,7 +875,7 @@
 .ion-android-cart:before {
   content: ""; }
 
-.ion-android-chat:before {
+.ion-android-house:before {
   content: ""; }
 
 .ion-android-checkbox:before {
@@ -1310,22 +1310,22 @@
 .ion-cash:before {
   content: ""; }
 
-.ion-chatbox:before {
+.ion-housebox:before {
   content: ""; }
 
-.ion-chatbox-working:before {
+.ion-housebox-working:before {
   content: ""; }
 
-.ion-chatboxes:before {
+.ion-houseboxes:before {
   content: ""; }
 
-.ion-chatbubble:before {
+.ion-housebubble:before {
   content: ""; }
 
-.ion-chatbubble-working:before {
+.ion-housebubble-working:before {
   content: ""; }
 
-.ion-chatbubbles:before {
+.ion-housebubbles:before {
   content: ""; }
 
 .ion-checkmark:before {
@@ -1691,16 +1691,16 @@
 .ion-ios-cart-outline:before {
   content: ""; }
 
-.ion-ios-chatboxes:before {
+.ion-ios-houseboxes:before {
   content: ""; }
 
-.ion-ios-chatboxes-outline:before {
+.ion-ios-houseboxes-outline:before {
   content: ""; }
 
-.ion-ios-chatbubble:before {
+.ion-ios-housebubble:before {
   content: ""; }
 
-.ion-ios-chatbubble-outline:before {
+.ion-ios-housebubble-outline:before {
   content: ""; }
 
 .ion-ios-checkmark:before {
@@ -2789,10 +2789,10 @@
 .ion-social-skype-outline:before {
   content: ""; }
 
-.ion-social-snapchat:before {
+.ion-social-snaphouse:before {
   content: ""; }
 
-.ion-social-snapchat-outline:before {
+.ion-social-snaphouse-outline:before {
   content: ""; }
 
 .ion-social-tumblr:before {
