--- a/www/lib/ionic/scss/ionicons/_ionicons-icons.scss
+++ b/www/lib/ionic/scss/ionicons/_ionicons-icons.scss
@@ -35,7 +35,7 @@
 .#{$ionicons-prefix}android-cancel:before,
 .#{$ionicons-prefix}android-car:before,
 .#{$ionicons-prefix}android-cart:before,
-.#{$ionicons-prefix}android-chat:before,
+.#{$ionicons-prefix}android-house:before,
 .#{$ionicons-prefix}android-checkbox:before,
 .#{$ionicons-prefix}android-checkbox-blank:before,
 .#{$ionicons-prefix}android-checkbox-outline:before,
@@ -180,12 +180,12 @@
 .#{$ionicons-prefix}camera:before,
 .#{$ionicons-prefix}card:before,
 .#{$ionicons-prefix}cash:before,
-.#{$ionicons-prefix}chatbox:before,
-.#{$ionicons-prefix}chatbox-working:before,
-.#{$ionicons-prefix}chatboxes:before,
-.#{$ionicons-prefix}chatbubble:before,
-.#{$ionicons-prefix}chatbubble-working:before,
-.#{$ionicons-prefix}chatbubbles:before,
+.#{$ionicons-prefix}housebox:before,
+.#{$ionicons-prefix}housebox-working:before,
+.#{$ionicons-prefix}houseboxes:before,
+.#{$ionicons-prefix}housebubble:before,
+.#{$ionicons-prefix}housebubble-working:before,
+.#{$ionicons-prefix}housebubbles:before,
 .#{$ionicons-prefix}checkmark:before,
 .#{$ionicons-prefix}checkmark-circled:before,
 .#{$ionicons-prefix}checkmark-round:before,
@@ -307,10 +307,10 @@
 .#{$ionicons-prefix}ios-camera-outline:before,
 .#{$ionicons-prefix}ios-cart:before,
 .#{$ionicons-prefix}ios-cart-outline:before,
-.#{$ionicons-prefix}ios-chatboxes:before,
-.#{$ionicons-prefix}ios-chatboxes-outline:before,
-.#{$ionicons-prefix}ios-chatbubble:before,
-.#{$ionicons-prefix}ios-chatbubble-outline:before,
+.#{$ionicons-prefix}ios-houseboxes:before,
+.#{$ionicons-prefix}ios-houseboxes-outline:before,
+.#{$ionicons-prefix}ios-housebubble:before,
+.#{$ionicons-prefix}ios-housebubble-outline:before,
 .#{$ionicons-prefix}ios-checkmark:before,
 .#{$ionicons-prefix}ios-checkmark-empty:before,
 .#{$ionicons-prefix}ios-checkmark-outline:before,
@@ -673,8 +673,8 @@
 .#{$ionicons-prefix}social-sass:before,
 .#{$ionicons-prefix}social-skype:before,
 .#{$ionicons-prefix}social-skype-outline:before,
-.#{$ionicons-prefix}social-snapchat:before,
-.#{$ionicons-prefix}social-snapchat-outline:before,
+.#{$ionicons-prefix}social-snaphouse:before,
+.#{$ionicons-prefix}social-snaphouse-outline:before,
 .#{$ionicons-prefix}social-tumblr:before,
 .#{$ionicons-prefix}social-tumblr-outline:before,
 .#{$ionicons-prefix}social-tux:before,
@@ -771,7 +771,7 @@
 .#{$ionicons-prefix}android-cancel:before { content: $ionicon-var-android-cancel; }
 .#{$ionicons-prefix}android-car:before { content: $ionicon-var-android-car; }
 .#{$ionicons-prefix}android-cart:before { content: $ionicon-var-android-cart; }
-.#{$ionicons-prefix}android-chat:before { content: $ionicon-var-android-chat; }
+.#{$ionicons-prefix}android-house:before { content: $ionicon-var-android-house; }
 .#{$ionicons-prefix}android-checkbox:before { content: $ionicon-var-android-checkbox; }
 .#{$ionicons-prefix}android-checkbox-blank:before { content: $ionicon-var-android-checkbox-blank; }
 .#{$ionicons-prefix}android-checkbox-outline:before { content: $ionicon-var-android-checkbox-outline; }
@@ -916,12 +916,12 @@
 .#{$ionicons-prefix}camera:before { content: $ionicon-var-camera; }
 .#{$ionicons-prefix}card:before { content: $ionicon-var-card; }
 .#{$ionicons-prefix}cash:before { content: $ionicon-var-cash; }
-.#{$ionicons-prefix}chatbox:before { content: $ionicon-var-chatbox; }
-.#{$ionicons-prefix}chatbox-working:before { content: $ionicon-var-chatbox-working; }
-.#{$ionicons-prefix}chatboxes:before { content: $ionicon-var-chatboxes; }
-.#{$ionicons-prefix}chatbubble:before { content: $ionicon-var-chatbubble; }
-.#{$ionicons-prefix}chatbubble-working:before { content: $ionicon-var-chatbubble-working; }
-.#{$ionicons-prefix}chatbubbles:before { content: $ionicon-var-chatbubbles; }
+.#{$ionicons-prefix}housebox:before { content: $ionicon-var-housebox; }
+.#{$ionicons-prefix}housebox-working:before { content: $ionicon-var-housebox-working; }
+.#{$ionicons-prefix}houseboxes:before { content: $ionicon-var-houseboxes; }
+.#{$ionicons-prefix}housebubble:before { content: $ionicon-var-housebubble; }
+.#{$ionicons-prefix}housebubble-working:before { content: $ionicon-var-housebubble-working; }
+.#{$ionicons-prefix}housebubbles:before { content: $ionicon-var-housebubbles; }
 .#{$ionicons-prefix}checkmark:before { content: $ionicon-var-checkmark; }
 .#{$ionicons-prefix}checkmark-circled:before { content: $ionicon-var-checkmark-circled; }
 .#{$ionicons-prefix}checkmark-round:before { content: $ionicon-var-checkmark-round; }
@@ -1043,10 +1043,10 @@
 .#{$ionicons-prefix}ios-camera-outline:before { content: $ionicon-var-ios-camera-outline; }
 .#{$ionicons-prefix}ios-cart:before { content: $ionicon-var-ios-cart; }
 .#{$ionicons-prefix}ios-cart-outline:before { content: $ionicon-var-ios-cart-outline; }
-.#{$ionicons-prefix}ios-chatboxes:before { content: $ionicon-var-ios-chatboxes; }
-.#{$ionicons-prefix}ios-chatboxes-outline:before { content: $ionicon-var-ios-chatboxes-outline; }
-.#{$ionicons-prefix}ios-chatbubble:before { content: $ionicon-var-ios-chatbubble; }
-.#{$ionicons-prefix}ios-chatbubble-outline:before { content: $ionicon-var-ios-chatbubble-outline; }
+.#{$ionicons-prefix}ios-houseboxes:before { content: $ionicon-var-ios-houseboxes; }
+.#{$ionicons-prefix}ios-houseboxes-outline:before { content: $ionicon-var-ios-houseboxes-outline; }
+.#{$ionicons-prefix}ios-housebubble:before { content: $ionicon-var-ios-housebubble; }
+.#{$ionicons-prefix}ios-housebubble-outline:before { content: $ionicon-var-ios-housebubble-outline; }
 .#{$ionicons-prefix}ios-checkmark:before { content: $ionicon-var-ios-checkmark; }
 .#{$ionicons-prefix}ios-checkmark-empty:before { content: $ionicon-var-ios-checkmark-empty; }
 .#{$ionicons-prefix}ios-checkmark-outline:before { content: $ionicon-var-ios-checkmark-outline; }
@@ -1409,8 +1409,8 @@
 .#{$ionicons-prefix}social-sass:before { content: $ionicon-var-social-sass; }
 .#{$ionicons-prefix}social-skype:before { content: $ionicon-var-social-skype; }
 .#{$ionicons-prefix}social-skype-outline:before { content: $ionicon-var-social-skype-outline; }
-.#{$ionicons-prefix}social-snapchat:before { content: $ionicon-var-social-snapchat; }
-.#{$ionicons-prefix}social-snapchat-outline:before { content: $ionicon-var-social-snapchat-outline; }
+.#{$ionicons-prefix}social-snaphouse:before { content: $ionicon-var-social-snaphouse; }
+.#{$ionicons-prefix}social-snaphouse-outline:before { content: $ionicon-var-social-snaphouse-outline; }
 .#{$ionicons-prefix}social-tumblr:before { content: $ionicon-var-social-tumblr; }
 .#{$ionicons-prefix}social-tumblr-outline:before { content: $ionicon-var-social-tumblr-outline; }
 .#{$ionicons-prefix}social-tux:before { content: $ionicon-var-social-tux; }
