--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,9 +10,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Liste" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <!-- Houses Tab -->
+  <ion-tab title="Liste" icon-off="ion-ios-houseboxes-outline" icon-on="ion-ios-houseboxes" href="#/tab/houses">
+    <ion-nav-view name="tab-houses"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
