house tab modifier

--- a/www/templates/house-detail.html
+++ b/www/templates/house-detail.html
@@ -6,7 +6,7 @@
 -->
 <ion-view view-title="{{house.name}}">
   <ion-content class="padding">
-    <img ng-src="{{house.face}}" style="width: 64px; height: 64px">
+    <img ng-src="{{house.img}}" style="width: 64px; height: 64px">
     <p>
       {{house.lastText}}
     </p>
