--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,16 +1,7 @@
 <ion-view view-title="Smart Inmmo">
   <ion-content class="padding">
-    <h2>Google Map</h2>
-    <p>
-    Maisons</a>.
-    </p>
-    <p>
-      Condos </p>
-    <p>
-    Duplex
-    </p>
-    <p>
-      zoom in/out
-    </p>
+    <h2>Google Map test</h2>
+    <div id="map"></div>
+
   </ion-content>
 </ion-view>
