--- a/www/templates/tab-houses.html
+++ b/www/templates/tab-houses.html
@@ -2,9 +2,9 @@
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="house in houses" type="item-text-wrap" href="#/tab/houses/{{house.id}}">
-        <img ng-src="{{house.face}}">
-        <h2>{{house.name}}</h2>
-        <p>{{house.lastText}}</p>
+        <img ng-src="{{house.img}}">
+        <h2>{{house.type}}, {{house.nbCh}} ch, {{house.nbSb}} sb  <span class="algnleft" style="float:right"> Prix: {{house.prix}}</span></></h2>
+        <p>{{house.adr}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(house)">
