--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,20 @@
 /* Empty. Add your own CSS if you like */
-.algnleft{
-  float :right;
-  }
+.slide-box{
+  height: 50%;
+  width: 100%;
+  text-align: center;
+  align: center;
+}
+
+.slide-box__image{
+  vertical-align: middle;
+  height: 100%;
+  width: 100%;
+  align: center;
+}
+
+.h2_title{
+  vertical-align: middle;
+  font-size:200%;
+  color: blue;
+}
