--- a/www/templates/tab-houses.html
+++ b/www/templates/tab-houses.html
@@ -1,10 +1,10 @@
-<ion-view view-title="Houses">
+<ion-view view-title="House">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="house in houses" type="item-text-wrap" href="#/tab/houses/{{house.id}}">
-        <img ng-src="{{house.img}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="house in houses" type="item-text-wrap" href="#/tab/houses/{{house.code}}">
+        <img ng-src="{{house.imgS[0]}}">
         <h2>{{house.type}}, {{house.nbCh}} ch, {{house.nbSb}} sb  <span class="algnleft" style="float:right"> Prix: {{house.prix}}</span></></h2>
-        <p>{{house.adr}}</p>
+        <p>{{house.adresse}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(house)">
