--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Smart Inmmo">
+<ion-view view-title="Smart Immo">
   <ion-content class="padding">
     <h2>Google Map test</h2>
     <div id="map"></div>
