--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,13 +5,13 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-positive">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Carte" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- Map Tab -->
+  <ion-tab title="Carte" icon-off="ion-earth" icon-on="ion-earth" href="#/tab/map">
+    <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
   <!-- Houses Tab -->
-  <ion-tab title="Liste" icon-off="ion-ios-houseboxes-outline" icon-on="ion-ios-houseboxes" href="#/tab/houses">
+  <ion-tab title="Liste" icon-off="ion-ios-list-outline" icon-on="ion-ios-list-outline" href="#/tab/houses">
     <ion-nav-view name="tab-houses"></ion-nav-view>
   </ion-tab>
 
