--- a/www/templates/house-detail.html
+++ b/www/templates/house-detail.html
@@ -1,10 +1,8 @@
 <!--
-  This template loads for the 'tab.friend-detail' state (app.js)
-  'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
-  The FriendsCtrl pulls data from the Friends service (service.js)
-  The Friends service returns an array of friend data
-  <ion-item class="item-remove-animate " ng-repeat="img in house.imgL" >
-     </ion-item>
+  This template loads for the 'tab.house-detail' state (app.js)
+  'house' is a $scope variable created in the HousesCtrl controller (controllers.js)
+  The HousesCtrl pulls data from the Houses service (service.js)
+  The Houses service returns an array of houses data
 -->
 
 <ion-view view-title="{{house.type}}">
