--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,7 +1,17 @@
+<style>
+  #map {
+  width: 100%;
+  height: 100%;
+  }
+
+  .scroll {
+  height: 100%;
+  }
+
+  </style>
 <ion-view view-title="Smart Immo">
   <ion-content class="padding">
-    <h2>Google Map test</h2>
-    <div id="map"></div>
+    <div id="map" data-tap-disabled="true"></div>
 
   </ion-content>
 </ion-view>
