--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,12 +6,12 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-positive">
 
   <!-- Map Tab -->
-  <ion-tab title="Carte" icon-off="ion-earth" icon-on="ion-earth" href="#/tab/map">
+  <ion-tab title="Carte" icon-off="icon ion-map" icon-on="icon ion-android-map" href="#/tab/map">
     <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
   <!-- Houses Tab -->
-  <ion-tab title="Liste" icon-off="ion-ios-list-outline" icon-on="ion-ios-list-outline" href="#/tab/houses">
+  <ion-tab title="Liste" icon-off="icon ion-ios-list-outline" icon-on="icon ion-ios-list" href="#/tab/houses">
     <ion-nav-view name="tab-houses"></ion-nav-view>
   </ion-tab>
 
